trunk/tests/jastadd/negative/type_errors/L1/3_TypeCheckingIfStmt.ob
MODULE TestModule;
BEGIN
	IF 10 THEN
	END
END TestModule.
